# Process this file with autoconf to produce a configure script.

AC_INIT(src/pixregion.h)

dnl ===========================================================================

# Package version number, (as distinct from shared library version)
# This must be manually synchronized with the version in src/ic.h
LIBPIXREGION_VERSION=0.1.0

# libtool shared library version

# Increment if the interface has additions, changes, removals.
LT_CURRENT=1

# Increment any time the source changes; set to
# 0 if you increment CURRENT
LT_REVISION=0

# Increment if any interfaces have been added; set to 0
# if any interfaces have been removed. removal has
# precedence over adding, so set to 0 if both happened.
LT_AGE=0

VERSION_INFO="$LT_CURRENT:$LT_REVISION:$LT_AGE"
AC_SUBST(VERSION_INFO)

dnl ===========================================================================

AC_CONFIG_AUX_DIR(config)

AM_INIT_AUTOMAKE(libpixregion, $LIBPIXREGION_VERSION)
AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_LIBTOOL

dnl ===========================================================================

AC_PATH_XTRA

dnl ===========================================================================

AC_SUBST(LIBPIXREGION_CFLAGS)
AC_SUBST(LIBPIXREGION_LIBS)

dnl ===========================================================================

AC_OUTPUT([
libpixregion.pc
Makefile
src/Makefile
])
